# qa-automation-suite

./: .gitignore  README.md  Test cases documentation.docx  main.py  pyproject.toml
datausa_api/: Data USA API Test Suite.postman_collection.json  Data USA API.postman_environment.json  README.md
saucedemo/: README.md  conftest.py
saucedemo/data/: users.py
saucedemo/pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_step_one_page.py  checkout_step_two_page.py  footer.py  header.py  inventory_item_page.py  inventory_page.py  login_page.py
saucedemo/perf/: psi.py
saucedemo/tests/: test_authentication.py  test_dynamic_content.py  test_performance.py  test_security.py  test_transactions.py
