[project]
name = "qa-tech-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
